--- a/Bootstrap Restaurant Free Website Template - Free-CSS.com/bootstrap-restaurant/contact.html
+++ b/Bootstrap Restaurant Free Website Template - Free-CSS.com/bootstrap-restaurant/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="themes/assets/ico/favicon.ico">
-    <title>Bootstrappage.com free templates contact us </title>
+    <title>Viz’eat by K&E </title>
 
     <!-- Bootstrap core CSS -->
     <link href="themes/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">Bootstrap Restaurant</a>
+              <a class="navbar-brand" href="index.html">Viz’eat by K&E</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -61,7 +61,7 @@
                     <li><a href="#">ACCOMPANIMENTS</a></li>
                   </ul>
                 </li>
-				
+
 				<li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Italian <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -76,7 +76,7 @@
                     <li><a href="#">ACCOMPANIMENTS</a></li>
                   </ul>
                 </li>
-				
+
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chines <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -106,7 +106,7 @@
 	<h2>Contact Us</h2>
 	</div>
 	</div>
-	
+
 	 <div class="container">
 	 <div class="bodyInner">
 			<p>
@@ -124,8 +124,8 @@
 			</p>
 	</div>
 	</div>
-	
-	
+
+
 
 	<div class="highlightSection">
 	<div class="container">
@@ -138,10 +138,10 @@
 		</div>
 		</div>
 		<div class="col-lg-4">
-		<div class="media"><a href="menu/"><img src="http://dev.bombaytakeawayclub.com/assets/img/gorkha-special-chicken.png" alt="GURKHA SPECIAL CHICKEN"> </a>						
+		<div class="media"><a href="menu/"><img src="http://dev.bombaytakeawayclub.com/assets/img/gorkha-special-chicken.png" alt="GURKHA SPECIAL CHICKEN"> </a>
 		<h3 class="media-heading text-danger-theme">GURKHA SPECIAL CHICKEN</h3>
 		<p>Boneless chicken marinated in mustard, smoked chilli, herbs and spices slowly cooked in tandoor. </p>
-		
+
 		</div>
 		</div>
 		<div class="col-lg-4">
@@ -154,8 +154,8 @@
 	</div>
 	</div>
 	</div>
-	
-	
+
+
 
 	<div class="introSection">
 		<div class="container">
@@ -163,35 +163,35 @@
 		<div class="col-lg-5">
 		<h3>Welcome to restaurent</h3>
 		<p>
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 		It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br><br>
-		It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+		It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
 		and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 		</p>
 		</div>
-		
+
 		<div class="col-lg-4">
 		<h3>Welcome to restaurent</h3>
 		<p>
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 		It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br><br>
-		
+
 		</p>
-		
+
 		</div>
-		
+
 		<div class="col-lg-3">
 		<h3>Welcome to restaurent</h3>
 		<p>
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-		
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+		text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+
 		</p>
-		
+
 		</div>
-		
+
 		</div>
 		</div>
 	</div>
@@ -215,4 +215,3 @@
     <script src="themes/assets/js/holder.js"></script>
   </body>
 </html>
-
